Finishing implementation of the tests

--- a/src/shopveyor/shopveyor.test/shopveyor.test.csproj
+++ b/src/shopveyor/shopveyor.test/shopveyor.test.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -52,6 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BillTests.cs" />
+    <Compile Include="OrderItemTests.cs" />
+    <Compile Include="ProductTests.cs" />
     <Compile Include="UserFixture.cs" />
     <Compile Include="UserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
